--- a/styles/style.css
+++ b/styles/style.css
@@ -53,7 +53,8 @@ body {
   background-color: #242424;
   color: #ffffff;
   overflow: hidden;
-  height: 100vh; }
+  height: 100vh;
+  font-family: 'Lato'; }
 
 main {
   overflow-y: scroll;
@@ -139,6 +140,20 @@ main {
     .about-section .about-text-container .description {
       font-size: 2rem;
       font-family: 'Lato'; }
+  .about-section .resume-button {
+    font-family: 'Lato';
+    outline: none;
+    border: none;
+    background: transparent;
+    font-size: 25px;
+    color: #ffffff;
+    border: 1px solid #ffffff;
+    padding: 5px 10px;
+    border-radius: 5px;
+    width: fit-content; }
+    .about-section .resume-button a, .about-section .resume-button a:hover, .about-section .resume-button a:focus, .about-section .resume-button a:active {
+      text-decoration: none;
+      color: inherit; }
   .about-section .about-section-backdrop {
     font-size: 10rem;
     position: absolute;
@@ -181,13 +196,32 @@ main {
   .works-section .codepen-embed-body footer {
     display: none; }
   .works-section .card {
-    width: 500px;
-    height: 300px;
+    height: 200px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
     background: linear-gradient(120deg, rgba(255, 255, 255, 0.6), rgba(255, 255, 255, 0.1));
     border-radius: 10px;
     backdrop-filter: blur(3px);
+    transition: all 1.5s;
     border: 1px solid rgba(255, 255, 255, 0.6);
-    box-shadow: 0 8px 32px 0 rgba(31, 38, 135, 0.37); }
+    box-shadow: 0 8px 32px 0 rgba(0, 0, 0, 0.37);
+    cursor: pointer; }
+    .works-section .card .icon {
+      font-size: 60px;
+      transition: all 0.7s; }
+    .works-section .card .heading {
+      font-size: 20px;
+      font-weight: bold; }
+  .works-section .card:hover {
+    background-size: 400%;
+    background-position: 50% 50%; }
+  .works-section .npm:hover .icon {
+    color: #ff0000; }
+  .works-section .codepen:hover .icon {
+    color: #5A2566; }
+  .works-section .github:hover .icon {
+    color: #000000; }
 
 @media screen and (max-width: 475px) {
   :root {
