--- a/styles/style.scss
+++ b/styles/style.scss
@@ -12,6 +12,7 @@ body {
     color: #ffffff;
     overflow: hidden;
     height: 100vh;
+    font-family: 'Lato';
 }
 
 main {
@@ -132,6 +133,24 @@ overflow: hidden;
     }
 }
 
+.resume-button {
+    font-family: 'Lato';
+    outline: none;
+    border: none;
+    background: transparent;
+    font-size: 25px;
+    color: #ffffff;
+    border: 1px solid #ffffff;
+    padding: 5px 10px;
+    border-radius: 5px;
+    width: fit-content;
+    
+    a, a:hover, a:focus, a:active {
+        text-decoration: none;
+        color: inherit;
+   }
+}
+
 .about-section-backdrop {
     font-size: 10rem;
     position: absolute;
@@ -173,15 +192,50 @@ overflow: hidden;
         }
     }
 
-    .card {
-        width: 500px;
-        height: 300px;
+    .card {        
+        height: 200px;
+        display: flex;
+        justify-content: center;
+        align-items: center;
         background: linear-gradient(120deg, rgba(255,255,255,0.6),rgba(255,255,255,0.1) );
       border-radius: 10px;
       backdrop-filter: blur(3px);
+      transition: all 1.5s;
       border: 1px solid rgba(255, 255, 255, 0.6);
-      box-shadow: 0 8px 32px 0 rgba( 31, 38, 135, 0.37 );
+      box-shadow: 0 8px 32px 0 rgba( 0,0,0, 0.37 );
+      cursor: pointer;
+
+      .icon {
+          font-size: 60px;
+          transition: all 0.7s;
       }
+
+      .heading {
+          font-size: 20px;
+          font-weight: bold;
+      }
+
+    }
+
+    .card:hover {
+        background-size: 400%;
+        background-position: 50% 50%;        
+    }
+    .npm:hover {
+        .icon {
+            color: #ff0000;
+        }
+    }
+    .codepen:hover {
+        .icon {
+            color: #5A2566;
+        }
+    }
+    .github:hover {
+        .icon {
+            color: #000000;
+        }
+    }
 }
 
 @media screen and (max-width: 475px) {
