--- a/styles/style.css
+++ b/styles/style.css
@@ -144,16 +144,31 @@ main {
     font-family: 'Lato';
     outline: none;
     border: none;
-    background: transparent;
     font-size: 25px;
+    background: transparent;
     color: #ffffff;
     border: 1px solid #ffffff;
     padding: 5px 10px;
     border-radius: 5px;
-    width: fit-content; }
+    width: fit-content;
+    position: relative;
+    z-index: 10;
+    overflow: hidden; }
     .about-section .resume-button a, .about-section .resume-button a:hover, .about-section .resume-button a:focus, .about-section .resume-button a:active {
       text-decoration: none;
       color: inherit; }
+  .about-section .resume-button::before {
+    content: '';
+    position: absolute;
+    z-index: 0;
+    top: 0;
+    background: linear-gradient(120deg, rgba(255, 255, 255, 0), rgba(255, 255, 255, 0.6), rgba(255, 255, 255, 0));
+    width: 100%;
+    height: 100%;
+    left: -100%;
+    transition: all 0.7s; }
+  .about-section .resume-button:hover::before {
+    left: 100%; }
   .about-section .about-section-backdrop {
     font-size: 10rem;
     position: absolute;
