--- a/styles/style.scss
+++ b/styles/style.scss
@@ -136,19 +136,39 @@ overflow: hidden;
 .resume-button {
     font-family: 'Lato';
     outline: none;
-    border: none;
-    background: transparent;
+    border: none;        
     font-size: 25px;
+    background: transparent;
     color: #ffffff;
     border: 1px solid #ffffff;
     padding: 5px 10px;
     border-radius: 5px;
     width: fit-content;
+    position: relative;
+    z-index: 10;
+    overflow: hidden;
     
     a, a:hover, a:focus, a:active {
         text-decoration: none;
         color: inherit;
    }
+
+}
+
+.resume-button::before {
+    content: '';
+    position: absolute;
+    z-index: 0;    
+    top: 0;
+    background: linear-gradient(120deg, rgba(255,255,255,0), rgba(255,255,255,0.6),rgba(255,255,255,0) );
+    width: 100%;
+    height: 100%;
+    left: -100%;
+    transition: all 0.7s;
+}
+
+.resume-button:hover::before {
+    left: 100%;
 }
 
 .about-section-backdrop {
